--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "morgan": "1.10.0",
     "nodemon": "2.0.15"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "devDependencies": {
     "eslint": "7.32.0",
     "eslint-config-standard": "16.0.3",
